--- a/src/app/sites/panel/files/files.component.html
+++ b/src/app/sites/panel/files/files.component.html
@@ -9,6 +9,7 @@
     (navigatedDown)="navigateToFolder($event)"
     (navigatedUp)="navigateUp()"
     (elementRenamed)="renameElement($event)"
+    (elementToggledVisibility)="toggleVisibilityElement($event)"
     (elementMoved)="moveElement($event)"
     (fileDownloaded)="downloadFile($event)"
     (filesUploaded)="uploadedFiles()">
