--- a/src/app/sites/panel/files/file-explorer/file-explorer.component.html
+++ b/src/app/sites/panel/files/file-explorer/file-explorer.component.html
@@ -74,7 +74,7 @@
           </a>
 
           <div class="dropdown-menu dropdown-primary dropdown-menu-right">
-            <a class="dropdown-item">
+            <a class="dropdown-item" (click)="openMoveDialog(element)">
               <i class="fa fa-folder-open-o" aria-hidden="true"></i>Przenieś
             </a>
             <a class="dropdown-item" (click)="openRenameDialog(element)">
