--- a/src/app/sites/panel/panel.component.html
+++ b/src/app/sites/panel/panel.component.html
@@ -12,6 +12,8 @@
   </div>
 </div>
 
+<div class="panel-container">
+
 <div class="py-5 mt-3">
 
   <div class="container">
@@ -41,6 +43,8 @@
       <router-outlet></router-outlet>
     </div>
   </div>
+</div>
+
 </div>
 
 </div>
