--- a/src/app/sites/panel/account/account.component.html
+++ b/src/app/sites/panel/account/account.component.html
@@ -4,8 +4,8 @@
 
       <div class="router-margin">
         <h1>Konto</h1>
-        <p>Nazwa: {{ user.name }}</p>
-        <p>Login/E-mail: {{ user.email }}</p>
+        <p>Login: {{ user.login }}</p>
+        <p>Rola: {{ user.role }}</p>
       </div>
 
     </div>
