--- a/src/app/sites/panel/account/account.component.html
+++ b/src/app/sites/panel/account/account.component.html
@@ -1,9 +1,43 @@
-<div class="container-fluid">
+
+
+<nav class="navbar navbar-expand-lg navbar-light scrolling-navbar" id="toolbar">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <!--<li class="nav-item"> &lt;!&ndash; powrót do katalogu wyżej &ndash;&gt;-->
+      <!--<a class="nav-link" *ngIf="canNavigateUp">-->
+      <!--<i class="fa fa-angle-left" aria-hidden="true"></i>-->
+      <!--</a>-->
+      <!--&lt;!&ndash;&ndash;&gt;-->
+      <!--</li>-->
+      <li class="nav-item mr-auto">
+        <span class="nav-link">Konto</span>
+      </li>
+    </ul>
+    <!--<ul class="navbar-nav nav-flex-icons">-->
+    <!--<li class="nav-item">-->
+    <!--<a class="nav-link" (click)="openNewFolderDialog()">-->
+    <!--<i class="fa fa-folder-o" aria-hidden="true"></i>-->
+    <!--</a>-->
+    <!--</li>-->
+    <!--<li class="nav-item">-->
+    <!--<a class="nav-link" (click)="openUploadDialog()">-->
+    <!--<i class="fa fa-upload" aria-hidden="true"></i>-->
+    <!--</a>-->
+    <!--</li>-->
+    <!--</ul>-->
+  </div>
+</nav>
+
+<div class="container-fluid account_container">
   <div class="row">
     <div class="col-md-12">
 
       <div class="router-margin">
-        <h1>Konto</h1>
+        <!--<h1>Konto</h1>-->
         <p>Login: {{ user.login }}</p>
         <p>Rola: {{ user.role }}</p>
       </div>
