--- a/src/app/sites/panel/files/file-explorer/modals/new-foler-dialog/new-foler-dialog.component.html
+++ b/src/app/sites/panel/files/file-explorer/modals/new-foler-dialog/new-foler-dialog.component.html
@@ -8,7 +8,7 @@
   <input class="form-control" placeholder="Nazwa nowego folderu" [(ngModel)]="folderName">
 </div>
 <div class="modal-footer">
-  <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="activeModal.dismiss('Anuluj click')" mdbWavesEffect>Anuluj</button>
+  <button type="button" mdbBtn class="waves-light btn btn-grey" aria-label="Close" (click)="activeModal.dismiss('Anuluj click')" mdbWavesEffect>Anuluj</button>
   <!-- (click)="basicModal.hide()" -->
   <button type="button" mdbBtn color="primary" class="relative waves-light" (click)="onClickCreate()" mdbWavesEffect>Utwórz</button>
 </div>
