--- a/src/app/sites/panel/files/file-explorer/modals/upload-dialog/upload-dialog.component.html
+++ b/src/app/sites/panel/files/file-explorer/modals/upload-dialog/upload-dialog.component.html
@@ -42,8 +42,7 @@
   <button
     type="button"
     mdbBtn
-    color="secondary"
-    class="waves-light"
+    class="waves-light btn btn-grey"
     aria-label="Close"
     (click)="activeModal.dismiss('Anuluj click')"
     *ngIf="!uploadSuccessful"
