--- a/src/app/sites/panel/files/file-explorer/modals/rename-dialog/rename-dialog.component.html
+++ b/src/app/sites/panel/files/file-explorer/modals/rename-dialog/rename-dialog.component.html
@@ -29,7 +29,7 @@
   <input class="form-control" [(ngModel)]="folderName">
 </div>
 <div class="modal-footer">
-  <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="activeModal.dismiss('Cancel click')"  mdbWavesEffect>Anuluj</button>
+  <button type="button" mdbBtn class="waves-light btn btn-grey" aria-label="Close" (click)="activeModal.dismiss('Cancel click')"  mdbWavesEffect>Anuluj</button>
   <!-- (click)="basicModal.hide()" -->
   <button type="button" mdbBtn color="primary" class="relative waves-light" (click)="onClickRename()" mdbWavesEffect>Zmień nazwę</button>
 </div>
