--- a/src/app/sites/panel/panel.component.scss
+++ b/src/app/sites/panel/panel.component.scss
@@ -1,13 +1,23 @@
 .list-group-item {
-  color: #2196f3;
+  color: rgba(0,0,0,0.7);
 }
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #2196f3;
-  border-color: #2196f3;
+  //background-color: #2196f3;
+  border-color: rgba(0, 0, 0, 0.125);
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
 }
 .panel-container {
   min-height: 73vh;
 }
-
+#toolbar {
+  background: rgba(0,0,0,0.1);
+}
+.list-group-item.active {
+  background-color: rgba(0,0,0,0.03);
+  color: rgba(0,0,0,0.7);
+  //border-color: ;
+}
+.list-group-item {}
