--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,6 +74,25 @@ html {
   background-size: cover;
   background-color: #2196f3;
 }
+
+.view-admin-header {
+  // bg-img w #
+  //background-image: url("/assets/anders-jilden-478920-unsplash.jpg");
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
+  height: 23vh;
+  background-attachment: fixed;
+  background-size: cover;
+  //background-color: #2196f3;
+  color: rgba(0,0,0,0.7);
+
+}
+.view-admin-header .header-page {
+  padding-top: 80px;
+  font-size: 1.5em;
+  color: rgba(0,0,0,0.7);
+}
+
 .view-page-header .header-page {
   padding-top: 64px;
   font-size: 1.5em;
@@ -91,5 +110,26 @@ html {
 
 .view-auto {
   height: auto;
+}
+
+.table thead tr {
+  background-color: rgba(0,0,0,0.03);
+}
+.tr-click {
+  cursor: pointer;
+}
+.aqua-gradient {
+  background: -webkit-linear-gradient(50deg,#2096ff,#05ffa3)!important;
+  background: -o-linear-gradient(50deg,#2096ff,#05ffa3)!important;
+  background: linear-gradient(40deg,#2096ff,#05ffa3)!important;
+}
+.blue-gradient {
+  background: -webkit-linear-gradient(50deg,#45cafc,#303f9f)!important;
+  background: -o-linear-gradient(50deg,#45cafc,#303f9f)!important;
+  background: linear-gradient(40deg,#45cafc,#303f9f)!important;
+}
+.panel-nav .navbar {
+  background: grey none !important;
+
 }
 
