--- a/src/app/sites/panel/accounts/modals/delete-account/delete-account.component.html
+++ b/src/app/sites/panel/accounts/modals/delete-account/delete-account.component.html
@@ -10,6 +10,6 @@
   </p>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-secondary" (click)="activeModal.dismiss('cancel click')">Anuluj</button>
+  <button type="button" class="btn btn-grey" (click)="activeModal.dismiss('cancel click')">Anuluj</button>
   <button type="button" class="btn btn-danger" (click)="onClickDelete()">Usuń</button>
 </div>
