--- a/src/app/sites/panel/panel.component.html
+++ b/src/app/sites/panel/panel.component.html
@@ -4,7 +4,9 @@
       <div class="container">
         <!--<div class="white-text wow fadeInRight" >-->
 
-          <h2 class="header-page">Panel administratora</h2>
+          <h2 class="header-page">
+            Panel <span *ngIf="activeUser">{{ activeUser?.role == 'admin' ? 'administratora' : 'moderatora' }} {{ activeUser?.login ? '(' + activeUser.login + ')' : '' }}</span>
+          </h2>
 
         <!--</div>-->
       </div>
@@ -14,7 +16,7 @@
 
 <div class="panel-container">
 
-<div class="mt-3">
+<div class="mt-3 mb-5">
 
   <div class="container">
   <div class="row">
@@ -47,7 +49,7 @@
         <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/files" mdbWavesEffect>
           <i class="fa fa-folder" aria-hidden="true"></i> Pliki
         </a>
-        <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/accounts" mdbWavesEffect>
+        <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/accounts" *ngIf="activeUser.role === 'admin'" mdbWavesEffect>
           <i class="fa fa-users" aria-hidden="true"></i> Użytkownicy
         </a>
         <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/account" mdbWavesEffect>
