--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,7 +51,10 @@ html {
 
 }
 
-
+.navbar {
+  z-index: 10;
+  box-shadow: none !important;
+}
 .view-100vh {
   background-repeat: no-repeat;
   height: 100vh;
@@ -59,8 +62,9 @@ html {
   background-size: cover;
 }
 
+// większy navabar po scrollowaniu
 .top-nav-collapse {
-  //background-color: #2196f3;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !important;
   background: linear-gradient(45deg, #45cafc, #303f9f) !important;
 }
 
@@ -131,5 +135,17 @@ html {
 .panel-nav .navbar {
   background: grey none !important;
 
+}
+
+.ladowanie {
+  text-align: center;
+  color: rgba(0,0,0,0.75);
+}
+.ladowanie i {
+  margin: 0 5px;
+}
+
+.ladowanie:hover {
+  background-color: inherit !important;
 }
 
